--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
-Hello, world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta content="ie=edge" http-equiv="x-ua-compatible">
+	<meta content="initial-scale=1, width=device-width" name="viewport">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
+	<link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+	<link href="assets/css/www-angelolicastro-com.css" rel="stylesheet">
+	<title>Home &middot; www.angelolicastro.com</title>
+</head>
+<body>
+	<h1><a href="/">Angelo Licastro</a> <span id="tagline">is a JavaScript fanatic</span>.</h1>
+	<p>My name is Angelo and I'm a builder and innovator at heart. I believe the ability to transform an idea into a reality and build something awesome is a cornerstone of engineering and a hallmark of my personality.</p>
+	<h2>Things I've Built</h2>
+	<div class="thing">
+		<div class="row">
+			<div class="column-3-4">
+				<h3><a href="https://github.com/angelolicastro/bed">Beam Dump eXperiment Event Display</a></h3>
+			</div>
+			<div class="column-1-4">
+				<h3>Java</h3>
+			</div>
+		</div>
+		<p>A visual event display for a particle detector.</p>
+	</div>
+	<div class="thing">
+		<div class="row">
+			<div class="column-3-4">
+				<h3><a href="https://github.com/angelolicastro/checkmark">Checkmark</a></h3>
+			</div>
+			<div class="column-1-4">
+				<h3>Python</h3>
+			</div>
+		</div>
+		<p>A tool that gives students instant feedback on the correctness of their coding assignments.</p>
+	</div>
+	<div class="thing">
+		<div class="row">
+			<div class="column-3-4">
+				<h3><a href="https://github.com/angelolicastro/cli-boilerplate-generator">CLI Boilerplate Generator</a></h3>
+			</div>
+			<div class="column-1-4">
+				<h3>Python</h3>
+			</div>
+		</div>
+		<p>Generates a friendly command line interface (CLI) boilerplate Python program.</p>
+	</div>
+	<div class="thing">
+		<div class="row">
+			<div class="column-3-4">
+				<h3><a href="https://github.com/angelolicastro/doodle-reminder">Doodle Reminder</a></h3>
+			</div>
+			<div class="column-1-4">
+				<h3>Python</h3>
+			</div>
+		</div>
+		<p>Reminds people who have not participated in a Doodle poll to participate in it.</p>
+	</div>
+	<div class="thing">
+		<div class="row">
+			<div class="column-3-4">
+				<h3><a href="https://github.com/angelolicastro/wifimark">Wi-Fi Mark</a></h3>
+			</div>
+			<div class="column-1-4">
+				<h3>Python</h3>
+			</div>
+		</div>
+		<p>A tool for Mac OS X that notifies the user if the fingerprint of a known Wi-Fi network has changed.</p>
+	</div>
+	<h2>Things I've Written</h2>
+	<div class="thing">
+		<div class="row">
+			<div class="column-3-4">
+				<h3><a href="posts/lookingglass-portal-software-self-xss-bug.html">LookingGlass Portal Software Self-XSS Bug</a></h3>
+			</div>
+			<div class="column-1-4">
+				<h3>2016</h3>
+			</div>
+		</div>
+		<p>Cathy Fitzpatrick and I discovered a self-cross-site scripting (self-XSS) bug that affects the Canisius College portal, which is powered by the LookingGlass portal software.</p>
+	</div>
+	<div id="footer">
+		<div class="row">
+			<div class="column-1-3">
+				<p><a href="mailto:angelo@angelolicastro.com"><i class="icon ion-email"></i></a></p>
+			</div>
+			<div class="column-1-3">
+				<p><a href="https://github.com/angelolicastro"><i class="icon ion-social-github"></i></a></p>
+			</div>
+			<div class="column-1-3">
+				<p><a href="https://www.linkedin.com/in/angelolicastro"><i class="icon ion-social-linkedin"></i></a></p>
+			</div>
+		</div>
+	</div>
+	<script src="assets/js/taglines.js"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-38770133-4', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+</body>
+</html>
