--- a/projects/hyde-park-memorials/index.html
+++ b/projects/hyde-park-memorials/index.html
@@ -35,8 +35,15 @@
   <p>You may need to scroll the table from left to right.</p>
   <div id="dedications"></div>
   <h2 id="data">Data</h2>
-  <p>The dataset is available in CSV, GeoJSON, and JSON formats: <a href="data">data/</a></p>
-  <p>All accompanying images can be found here: <a href="data/images/">data/images/</a></p>
+  <p>The dataset is available in CSV, GeoJSON, and JSON formats:</p>
+  <h3>CSV</h3>
+  <p><a href="data/csv/dedications.csv">dedications.csv</a> | <a href="data/csv/memorials.csv">memorials.csv</a></p>
+  <h3>GeoJSON</h3>
+  <p><a href="data/geojson/dedications_memorials.geojson">dedications_memorials.geojson</a></p>
+  <h3>JSON</h3>
+  <p><a href="data/json/dedications.json">dedications.json</a> | <a href="data/csv/memorials.json">memorials.json</a></p>
+  <h3>Images</h3>
+  <p>You can download individual images from the map or table above.</p>
   <h2 id="contact">Contact</h2>
   <p>If you would like to request a name be removed or have any other inquiries regarding this project, please send me an email at: <span id="email-address"><span id="challenge-notice">Please solve the challenge</span>: <span id="challenge-question"></span> <input id="challenge-answer" placeholder="?"></span></p>
   <h2 id="credits">Credits</h2>
