--- a/projects/hyde-park-memorials/index.html
+++ b/projects/hyde-park-memorials/index.html
@@ -35,7 +35,7 @@
   <p>You may need to scroll the table from left to right.</p>
   <div id="dedications"></div>
   <h2 id="data">Data</h2>
-  <p>The dataset is available in CSV, GeoJSON, and JSON formats:</p>
+  <p>The dataset is available in CSV, GeoJSON, and JSON formats.</p>
   <h3>CSV</h3>
   <p><a href="data/csv/dedications.csv">dedications.csv</a> | <a href="data/csv/memorials.csv">memorials.csv</a></p>
   <h3>GeoJSON</h3>
