Correct json file link

--- a/projects/hyde-park-memorials/index.html
+++ b/projects/hyde-park-memorials/index.html
@@ -41,7 +41,7 @@
   <h3>GeoJSON</h3>
   <p><a href="data/geojson/dedications_memorials.geojson">dedications_memorials.geojson</a></p>
   <h3>JSON</h3>
-  <p><a href="data/json/dedications.json">dedications.json</a> | <a href="data/csv/memorials.json">memorials.json</a></p>
+  <p><a href="data/json/dedications.json">dedications.json</a> | <a href="data/json/memorials.json">memorials.json</a></p>
   <h3>Images</h3>
   <p>You can download individual images from the map or table above.</p>
   <h2 id="contact">Contact</h2>
