Cleanup unwanted params

--- a/h/index.html
+++ b/h/index.html
@@ -6,7 +6,7 @@
   <meta name="robots" content="noai, noimageai">
   <title>Redirecting...</title>
   
-  <meta http-equiv="refresh" content="0;url=/projects/hyde-park-memorials/?utm_source=%2Fh&utm_medium=referral">
+  <meta http-equiv="refresh" content="0;url=/projects/hyde-park-memorials/">
 </head>
 <body>
   <!-- Google tag (gtag.js) -->
