Should be id but we're not even using it

--- a/projects/hyde-park-memorials/index.html
+++ b/projects/hyde-park-memorials/index.html
@@ -24,7 +24,7 @@
   </script>
 
   <h1>Hyde Park Dedication and Memorial Trees</h1>
-  <p class="mention">A project by <a href="https://angelolicastro.com">Angelo Licastro</a>.</p>
+  <p>A project by <a href="https://angelolicastro.com">Angelo Licastro</a>.</p>
   <p>Throughout Hyde Park in Niagara Falls, NY, trees—along with a bench and a garden—stand as living tributes to loved ones. Until now, no single record has brought these memorials together. This project seeks to honor them by doing so. I hope these tributes inspire you as they have inspired me.</p>
   <p><a href="#memorials">Memorials</a> | <a href="#dedications">Dedications</a> | <a href="#data">Data</a> | <a href="#contact">Contact</a> | <a href="#credits">Credits</a></p>
   <div id="map"></div>
