--- a/projects/hyde-park-memorials/index.html
+++ b/projects/hyde-park-memorials/index.html
@@ -28,6 +28,7 @@
   <p>Throughout Hyde Park in Niagara Falls, NY, trees—along with a bench and a garden—stand as living tributes to loved ones. Until now, no single record has brought these memorials together. This project seeks to honor them by doing so. I hope these tributes inspire you as they have inspired me.</p>
   <p><a href="#memorials">Memorials</a> | <a href="#dedications">Dedications</a> | <a href="#data">Data</a> | <a href="#contact">Contact</a> | <a href="#credits">Credits</a></p>
   <div id="map"></div>
+  <p id="map-legend">○ Memorial Trees ◇ Memorial Bench ☆ Memorial Garden □ Dedication Trees</p>
   <h2>Memorials</h2>
   <p>You may need to scroll the table from left to right.</p>
   <div id="memorials"></div>
