Clarify CSV format usage

--- a/projects/hyde-park-memorials/index.html
+++ b/projects/hyde-park-memorials/index.html
@@ -38,6 +38,7 @@
   <h2 id="data">Data</h2>
   <p>The dataset is available in CSV, GeoJSON, and JSON formats.</p>
   <h3>CSV</h3>
+  <p>CSV files can be imported into Microsoft Excel and Google Sheets to create spreadsheets.</p>
   <p><a href="data/csv/dedications.csv">dedications.csv</a> | <a href="data/csv/memorials.csv">memorials.csv</a></p>
   <h3>GeoJSON</h3>
   <p><a href="data/geojson/dedications_memorials.geojson">dedications_memorials.geojson</a></p>
